# fastapi-sqlmodel-celery-template

./: .env-sample  README.md  docker-compose.yaml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  dependancies.py
backend/app/api/routes/: health.py  tasks.py  users.py
backend/app/core/: celery.py  config.py
backend/app/crud/: users.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 27442501ce12_init.py
backend/app/models/: tasks.py  users.py
