[tool.poetry]
name = "aiweaver"
version = "0.1.0"
description = ""
authors = ["Ryan Bradshaw <ryan@rbradshaw.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
celery = "^5.3.6"
flower = "^2.0.1"
SQLAlchemy = "^2.0.29"
sqlmodel = "^0.0.16"
alembic = "^1.13.1"
asyncio-redis = "^0.16.0"
asyncpg = "^0.29.0"
redis = "^5.0.3"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
